[package]
name = "absolute-vault"
version = "1.0.0"
description = "MIKO token vault for tax collection and distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "absolute_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
solana-program = "2.3.0"

[build-dependencies]
solana-sdk = "2.3.0"
serde_json = "1.0"

[profile.release]
overflow-checks = true
